Fix the alignment for icon on security code

--- a/client/sass/main.sass
+++ b/client/sass/main.sass
@@ -674,7 +674,9 @@ body
                 opacity: 1
 
         #ccvVerify
-            float: left
+            position: absolute
+            right: 214px
+            
             margin-top: 26px
             margin-left: 24px
 
